--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
-    Olá mundo
+    <header>
+        <div class="container">
+            <h2 class="logo">CRITFLIX</h2>
+            <nav>
+                <a href="#">Inicio</a>
+                <a href="#">Séries</a>
+                <a href="#">Filmes</a>
+                <a href="#">Animação</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">WATCHMEN</h3>
+                <p class="descricao">Uma visão atualizada do mundo, onde justiceiros mascarados transitam constantemente pela delicada linha que separa o bem do mal em uma sociedade que os despreza.</p>
+            </div>
+            <div class="botoes">
+                <button role="button" class="botao">
+                    ASSISTIR
+                </button>
+                <button role="button" class="botao">
+                    INFO
+                </button>
+            </div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
