card principal concluído

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
             <div class="container">
                 <h3 class="titulo">WATCHMEN</h3>
                 <p class="descricao">Uma visão atualizada do mundo, onde justiceiros mascarados transitam constantemente pela delicada linha que separa o bem do mal em uma sociedade que os despreza.</p>
-            </div>
-            <div class="botoes">
-                <button role="button" class="botao">
-                    ASSISTIR
-                </button>
-                <button role="button" class="botao">
-                    INFO
-                </button>
+            
+                <div class="botoes">
+                    <button role="button" class="botao">
+                        ASSISTIR <i class="fa-regular fa-circle-play"></i>
+                    </button>
+                    <button role="button" class="botao">
+                        INFO <i class="fa-solid fa-circle-info"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <script src="https://kit.fontawesome.com/a0d0a7aa61.js" crossorigin="anonymous"></script>
 </body>
 </html>
