--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Critflix</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/main.css">
+    <!--responsividade-->
+    <link rel="stylesheet" type="text/css" href="style/responsive.css">
+    <!--owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
 </head>
 <body>
     <header>
@@ -13,7 +18,7 @@
             <nav>
                 <a href="#">Inicio</a>
                 <a href="#">Séries</a>
-                <a href="#">Filmes</a>
+                <a href="#filmes">Filmes</a>
                 <a href="#">Animação</a>
             </nav>
         </div>
@@ -35,6 +40,44 @@
             </div>
         </div>
     </main>
+    <div class="filmes-lista">
+        <h4 class="subtitulo" id="#filmes">Filmes</h4>
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter1.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter2.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter3.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter4.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter5.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter6.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter7.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter8.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter9.jpg" alt="poster de filme">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="/src/img/posters/movieposter10.jpg" alt="poster de filme">
+            </div>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/a0d0a7aa61.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/main.js"></script>
 </body>
 </html>
