--- a/index.html
+++ b/index.html
@@ -13,35 +13,46 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container" id="topo">
             <h2 class="logo">CRITFLIX</h2>
             <nav>
-                <a href="#">Inicio</a>
-                <a href="#">Séries</a>
+                <a href="#topo">Inicio</a>
                 <a href="#filmes">Filmes</a>
+                <a href="#">Séries</a>
                 <a href="#">Animação</a>
             </nav>
         </div>
     </header>
     <main>
+        <div id="abrirModal" class="modal">
+            <a href="#fechar" title="Fechar" class="fechar">x</a>
+            <div class="informacoes">
+                <h2>WATCHMEN</h2>
+                <p>Ano: 2019</p>
+                <p>Produtora: HBO</p>
+                <p>Criador: Damon Lindelof</p>
+                <p>Watchmen é uma série de televisão dramática de super-herói americana que continua a série em quadrinhos de 1987 da DC Comics, Watchmen, criada por Alan Moore e Dave Gibbons. A série de televisão foi criada por Damon Lindelof para HBO, com Lindelof servindo como produtor executivo e roteirista. Seu conjunto de elenco inclui Regina King, Don Johnson, Tim Blake Nelson, Yahya Abdul-Mateen II, Andrew Howard, Jacob Ming-Trent, Tom Mison, Sara Vickers, Dylan Schombing, Louis Gossett Jr., Jeremy Irons, Jean Smart e Hong Chau.</p>
+                <p>Lindelof comparou a série de televisão como um "remix" da série limitada de quadrinhos original. Enquanto a série é tecnicamente uma sequência, qual toma lugar 34 anos após os eventos dos quadrinhos dentro da mesma realidade alternativa, Lindelof queria introduzir novos personagens e conflitos que criariam uma nova história dentro da continuidade de Watchmen, em vez de fazer um reboot. A série foca nos eventos envolvendo as tensões raciais em Tulsa, Oklahoma, em 2019. Um grupo supremacista branco chamado Seventh Kavalry (Sétima Kavalaria) tem tomado as armas contra o Departamento de Polícia de Tulsa por causa de percebidas injustiças raciais, levando a polícia a esconder suas identidades com máscaras para prevenir a Seventh Kavalry de atingir eles em suas casas, como ocorreu na chamada White Night (Noite Branca). Angela Abar (King), uma detetive conhecida como Sister Night, investiga o assassinato de seu amigo e superior, Judd Crawford (Johnson), e descobre segredos envolvendo as situações ao redor do vigilantismo.</p>
+            </div>
+        </div>
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">WATCHMEN</h3>
                 <p class="descricao">Uma visão atualizada do mundo, onde justiceiros mascarados transitam constantemente pela delicada linha que separa o bem do mal em uma sociedade que os despreza.</p>
             
                 <div class="botoes">
-                    <button role="button" class="botao">
+                    <a class="botao" role="button" href="https://www.youtube.com/watch?v=9rPqGLPwaVg" target="_blank" >
                         ASSISTIR <i class="fa-regular fa-circle-play"></i>
-                    </button>
-                    <button role="button" class="botao">
+                    </a>
+                    <a class="botao" role="button" href="#abrirmodal" >
                         INFO <i class="fa-solid fa-circle-info"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
     </main>
     <div class="filmes-lista">
-        <h4 class="subtitulo" id="#filmes">Filmes</h4>
+        <h4 class="subtitulo" id="filmes">Filmes</h4>
         <div class="owl-carousel owl-theme">
             <div class="item">
                 <img class="box-filme" src="/src/img/posters/movieposter1.jpg" alt="poster de filme">
