ajustes de nome

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <a href="#topo">Inicio</a>
                 <a href="#filmes">Filmes</a>
-                <a href="#">Séries</a>
+                <a href="#series">Séries</a>
                 <a href="#">Animação</a>
             </nav>
         </div>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </main>
-    <div class="filmes-lista">
+    <div class="lista">
         <h4 class="subtitulo" id="filmes">Filmes</h4>
         <div class="owl-carousel owl-theme">
             <div class="item">
@@ -86,8 +86,8 @@
             </div>
         </div>
     </div>
-    <div class="filmes-lista">
-        <h4 class="subtitulo" id="Séries">Séries</h4>
+    <div class="lista">
+        <h4 class="subtitulo" id="series">Séries</h4>
         <div class="owl-carousel owl-theme">
             <div class="item">
                 <img class="box-filme" src="/src/img/posters/serieposter1.jpg" alt="poster de filme">
